@@ -389,11 +389,6 @@
             'apps.store' => array(
                 'request' => array(
                     array(
-                        'key' => 'enableZMCheckoutShipping',
-                        'type' => 'boolean',
-                        'desc' => 'Enable using ZenMagick checkout shipping code.'
-                    ),
-                    array(
                         'key' => 'enableZCRequestHandling',
                         'type' => 'string',
                         'desc' => 'Comma separated list of request ids to be processed by Zen Cart.'
